# nu_plugin_bio

./: Cargo.toml
src/: bio.rs  lib.rs  main.rs
src/bio_format/: bam.rs  bcf.rs  bed.rs  cram.rs  fasta.rs  gfa.rs  gff.rs
src/nu/: mod.rs
